choose node pool for packaging tekton tasks
